[gd_scene load_steps=9 format=3 uid="uid://c6bfudofjty1o"]

[ext_resource type="Script" path="res://scripts_prototipo/cena_teste.gd" id="1_1gkh1"]
[ext_resource type="PackedScene" uid="uid://b6yp80jcx3bjn" path="res://cenas_prototipo/navezinha.tscn" id="1_q2465"]
[ext_resource type="Script" path="res://scripts_prototipo/GameDirector.gd" id="3_akmlt"]
[ext_resource type="Script" path="res://scripts_prototipo/control_director.gd" id="4_6byac"]
[ext_resource type="PackedScene" uid="uid://bref7184bxr87" path="res://cenas_prototipo/HP_Bar.tscn" id="5_apg6a"]
[ext_resource type="Script" path="res://scripts_prototipo/player_director.gd" id="5_tgs65"]
[ext_resource type="Texture2D" uid="uid://c1h4cf7xrc7cw" path="res://sprites_prototipo/UI_teste_outra-export.png" id="7_kcroq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxtm3"]
size = Vector2(13, 1096)

[node name="Cena_Teste" type="Node2D"]

[node name="Navezinha" parent="." instance=ExtResource("1_q2465")]
position = Vector2(460, 540)

[node name="Navezinha2" parent="." instance=ExtResource("1_q2465")]
position = Vector2(1500, 540)
playerSide = 1

[node name="BulletFilter" type="Area2D" parent="."]
position = Vector2(960, 0)
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletFilter"]
position = Vector2(0, 538)
scale = Vector2(1e-05, 1)
shape = SubResource("RectangleShape2D_xxtm3")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BulletFilter"]
position = Vector2(960, 538)
scale = Vector2(1e-05, 1)
shape = SubResource("RectangleShape2D_xxtm3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BulletFilter"]
position = Vector2(-960, 0)
scale = Vector2(1e-05, 1)
shape = SubResource("RectangleShape2D_xxtm3")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BulletFilter"]
rotation = 1.5708
scale = Vector2(1e-05, 2)
shape = SubResource("RectangleShape2D_xxtm3")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="BulletFilter"]
position = Vector2(0, 1080)
rotation = 1.5708
scale = Vector2(1e-05, 2)
shape = SubResource("RectangleShape2D_xxtm3")

[node name="NoLongerGameDirector" type="Node" parent="."]
script = ExtResource("1_1gkh1")

[node name="GameDirector" type="Node" parent="." groups=["GameDirector"]]
script = ExtResource("3_akmlt")
isEndless = true
easyWeight = 100.0
minPatternCount = 2
maxPatternCount = 5
minTime = 4.0
maxTime = 6.0
easyCount = 6

[node name="ControlDirector" type="Node" parent="." groups=["ControlDirector"]]
script = ExtResource("4_6byac")

[node name="PlayerDirector" type="Node" parent="." groups=["PlayerDirector"]]
script = ExtResource("5_tgs65")

[node name="HpBar" parent="." instance=ExtResource("5_apg6a")]
offset_left = 36.0
offset_top = 60.0
offset_right = 36.0
offset_bottom = 60.0

[node name="HpBar2" parent="." instance=ExtResource("5_apg6a")]
layout_direction = 2
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1884.0
offset_top = 60.0
offset_right = 1884.0
offset_bottom = 60.0
grow_horizontal = 0
scale = Vector2(-1, 1)
playerSide = 1

[node name="UiTesteOutra-export" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(960, 540)
texture = ExtResource("7_kcroq")

[connection signal="grazed" from="Navezinha2" to="GameDirector" method="_on_player_grazed"]
[connection signal="hit" from="Navezinha2" to="GameDirector" method="_on_player_hit"]
